tests/negative/comptime/self_referential_const.orng
// self_referential_const.orng:5:19: error: error: recursive definition detected
// const x = comptime{x}
//                  ^
// 
const x = comptime{x}

fn main() -> Int {0}